control-plane-operator/controllers/hostedcontrolplane/testdata/metrics-proxy/AROSwift/zz_fixture_TestControlPlaneComponents_metrics_proxy_ca_cert_secret.yaml
apiVersion: v1
data:
  tls.crt: ""
  tls.key: ""
kind: Secret
metadata:
  annotations:
    hypershift.openshift.io/desired-state-hash: 76fe20327cf26e23048275280425f09ab3e2de02bf3b0e288a948ec186966f51
  name: metrics-proxy-ca-cert
  namespace: hcp-namespace
  ownerReferences:
  - apiVersion: hypershift.openshift.io/v1beta1
    blockOwnerDeletion: true
    controller: true
    kind: HostedControlPlane
    name: hcp
    uid: ""
  resourceVersion: "1"
type: kubernetes.io/tls
