control-plane-operator/controllers/hostedcontrolplane/testdata/metrics-proxy/AROSwift/zz_fixture_TestControlPlaneComponents_metrics_proxy_config_configmap.yaml
apiVersion: v1
data:
  config.yaml: |
    components: null
    endpointResolver:
      caFile: /etc/metrics-proxy/certs/endpoint-resolver-ca/tls.crt
      url: https://endpoint-resolver.hcp-namespace.svc
kind: ConfigMap
metadata:
  name: metrics-proxy-config
  namespace: hcp-namespace
  ownerReferences:
  - apiVersion: hypershift.openshift.io/v1beta1
    blockOwnerDeletion: true
    controller: true
    kind: HostedControlPlane
    name: hcp
    uid: ""
  resourceVersion: "1"
