control-plane-operator/controllers/hostedcontrolplane/testdata/metrics-proxy/AROSwift/zz_fixture_TestControlPlaneComponents_metrics_proxy_route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    hypershift.openshift.io/desired-state-hash: 02bb339f277da489ee5881d1190fd9d4a1457a9b92de610b4cec929b00c4c774
  labels:
    hypershift.openshift.io/hosted-control-plane: hcp-namespace
    hypershift.openshift.io/internal-route: "true"
  name: metrics-proxy
  namespace: hcp-namespace
  ownerReferences:
  - apiVersion: hypershift.openshift.io/v1beta1
    blockOwnerDeletion: true
    controller: true
    kind: HostedControlPlane
    name: hcp
    uid: ""
  resourceVersion: "1"
spec:
  host: metrics-proxy.apps.hcp.hypershift.local
  tls:
    insecureEdgeTerminationPolicy: None
    termination: passthrough
  to:
    kind: Service
    name: metrics-proxy
    weight: null
  wildcardPolicy: None
status: {}
